@@ -4,6 +4,8 @@
 	set etc.) are printed on debug again.
 	(tino_getopt_print_option_name): added
 	(tino_getopt_usage): tino_getopt_print_option_name now used
+	(tino_getopt_init): DEFAULT_ENV implemented
+	(tino_getopt_usage): help corrected
 
 2007-05-12    <tino@firebird.03.softkill.net>
 
